k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wejay
  namespace: wejay

spec:
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: wejay
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wejay
  namespace: wejay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wejay
  template:
    metadata:
      labels:
        app: wejay
    spec:
      serviceAccountName: wejay
      imagePullSecrets:
      - name: regcred
      containers:
        - name: wejay
          image: ghcr.io/iteam1337/wejay-2025:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
