k8s/redis.yaml
# Service for Redis connection
apiVersion: v1
kind: Service
metadata:
  name: wejay-redis-master
  namespace: wejay
  labels:
    app: wejay-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: wejay-redis
    role: master
  type: ClusterIP
