k8s/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: wejay-backend-policy
  namespace: wejay
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: wejay-endpoint-route
  timeout:
    http:
      requestTimeout: 0s
      maxStreamDuration: 0s
      connectionIdleTimeout: 0s
